# cpp_learn

011-openglChernoTutorial/: .gitignore  CMakeLists.txt  compile_flags.txt  configure.sh  make.sh  run.sh
011-openglChernoTutorial/.cache/clangd/index/: context.c.20BC7049DCF7973F.idx  egl_context.c.E9BBCEE048AF0C99.idx  glfw3.h.D8538392AFC7B2A9.idx  glfw3native.h.589A1670B23613F0.idx  init.c.19CEB24BAFEF8120.idx  input.c.FE9C104153A9FB40.idx  internal.h.1B65AC3340B5188B.idx  main.cpp.FA4B5E4AA12B5465.idx  mappings.h.E36C181C52EBE8F6.idx  monitor.c.6D8C1138A8F3735B.idx  null_init.c.885BF59C719EB9A4.idx  null_joystick.c.6C08819B2D0ECBF1.idx  null_joystick.h.7F11B71722B41807.idx  null_monitor.c.27CADF061D20F9B6.idx  null_platform.h.E2F85DEDA8054B20.idx  null_window.c.48D49296C82ABB08.idx  osmesa_context.c.2AF674CFCF30F8C5.idx  platform.c.8790DDBC68F40E10.idx  platform.h.3E54549244077BD9.idx  vulkan.c.D990B2D5C7996602.idx  wgl_context.c.D4176D0A9E36238D.idx  win32_init.c.59B7872F245DB10E.idx  win32_joystick.c.654A4065AB3A3AC3.idx  win32_joystick.h.528E351218BD586C.idx  win32_module.c.54EDB66C1757749D.idx  win32_monitor.c.E8FD65D973122310.idx  win32_platform.h.30ECCFDC0BC7FF3B.idx  win32_thread.c.1FE9BB4D26DBC558.idx  win32_thread.h.DA309A405CD0B5E0.idx  win32_time.c.359516B89978C90B.idx  win32_time.h.22EFE81E0DE8E637.idx  win32_window.c.BB28CECB5ACEA24C.idx  window.c.1B92D5C6F5705E9B.idx
011-openglChernoTutorial/dependencies/glad/: CMakeLists.txt  configure.sh
011-openglChernoTutorial/res/shaders/: basic.shader
011-openglChernoTutorial/src/: glad.c  main.cpp
(+37 files in other folders)
